# orderbook_checker

./: .dockerignore  .gitignore  DATA_BRIEFING.md  README.md  com.orderbook.recorder.plist  config-macmini.yaml  config.example.yaml  pyproject.toml  requirements.txt
docker/daily-report/: Dockerfile  cloudbuild.yaml  requirements.txt  run_report.sh
docs/: binance_orderbook_recorder_spec.md
reports/: penetration_by_side.csv  penetration_by_side.parquet  penetration_summary.csv  penetration_summary.parquet
scripts/: deploy-daily-report.sh
src/: __init__.py
src/recorder/: __init__.py  __main__.py  cli.py  config.py  health.py  notify.py  orderbook.py  recorder.py  snapshot_scheduler.py  sync.py  writers.py  ws_depth_client.py  ws_trade_client.py
tests/: __init__.py  conftest.py  test_integration.py  test_orderbook.py  test_sync.py
tools/: analyze_level_penetration.py  analyze_penetration.py  analyze_trade_sizes.py  calibrate_timestamp_offset.py  daily_report.py  daily_report_light.py  diagnose_hour01.py  diagnose_price_mismatch.py  heal_snapshots.py  validate_data.py  validate_source.py
